--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="DadDrivesToChina : ">
+    <meta name="description" content="Dad Drives To China : Sifting through old stuff together and discover something new">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>DadDrivesToChina</title>
+    <title>Dad Drives To China</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/nicolaipogadl/DadDrivesToChina">View on GitHub</a>
 
-          <h1 id="project_title">DadDrivesToChina</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Dad Drives To China</h1>
+          <h2 id="project_tagline">Sifting through old stuff together and discover something new</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/nicolaipogadl/DadDrivesToChina/zipball/master">Download this project as a .zip file</a>
@@ -31,16 +31,22 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This is an initial test post - not to confuse with an initial post post! </p>
+        <p><strong>For the longest time</strong> I wanted to ask my dad more about his travels to China in the 1980s - shortly after the government decided to open up more to the world. I knew some stories and have seen a few pictures, but it still is a mystery to me.</p>
 
-<p>I try to insert a picture to see how it looks - voilà! <img src="http://honestjons.com/doc_library/Originals/46516.jpg" alt="Yay! Picture! "></p>
+<p><strong>So with this project</strong> my dad and I would like to change that.Stretched out over the next two or three years we will try to digitize some of the old pictures, collect stories and try to connect them to present day China.</p>
+
+<p><strong>This here is just</strong> the landing page for the project - the whole documentation is available via the github wiki.</p>
+
+<p>**Don't forget to watch <a href="https://www.youtube.com/watch?v=fCbY3qdsWQ4">the initiating video for this project! </a> </p>
+
+<hr>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">DadDrivesToChina maintained by <a href="https://github.com/nicolaipogadl">nicolaipogadl</a></p>
+        <p class="copyright">Dad Drives To China maintained by <a href="https://github.com/nicolaipogadl">nicolaipogadl</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
