--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <p><strong>This here is just</strong> the landing page for the project - the whole documentation is available via the github wiki.</p>
 
-<p>**Don't forget to watch <a href="https://www.youtube.com/watch?v=fCbY3qdsWQ4">the initiating video for this project! </a> </p>
+<p><strong>Don't forget</strong> to watch <a href="https://www.youtube.com/watch?v=fCbY3qdsWQ4">the initiating video for this project! </a> </p>
 
-<p>**There are some interesting links <a href="http://writings.neonspice.net/?p=28">here</a>and <a href="https://www.flickr.com/photos/gedawei/collections/72157624364922864/">here</a> about similar projects. </p>
+<p><strong>There are also</strong> some interesting links <a href="http://writings.neonspice.net/?p=28">here</a>and <a href="https://www.flickr.com/photos/gedawei/collections/72157624364922864/">here</a> about similar projects. </p>
       </section>
     </div>
 
