--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dad Drives To China : Sifting through old stuff together and discover something new">
+    <meta name="description" content="Dad Drives To China : sifting through old stuff together and discover something new">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/nicolaipogadl/DadDrivesToChina">View on GitHub</a>
 
           <h1 id="project_title">Dad Drives To China</h1>
-          <h2 id="project_tagline">Sifting through old stuff together and discover something new</h2>
+          <h2 id="project_tagline">sifting through old stuff together and discover something new</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/nicolaipogadl/DadDrivesToChina/zipball/master">Download this project as a .zip file</a>
@@ -33,9 +33,8 @@
       <section id="main_content" class="inner">
         <p><strong>For the longest time</strong> I wanted to ask my dad more about his travels to China in the 1980s - shortly after the government decided to open up more to the world. I knew some stories and have seen a few pictures, but it still is a mystery to me.</p>
 
-<p><img src="http://i.imgur.com/j5NFCEp.jpg" alt="China "></p>
-
-<p><strong>So with this project</strong> my dad and I would like to change that.Stretched out over the next two or three years we will try to digitize some of the old pictures, collect stories and try to connect them to present day China. </p>
+<p><img src="http://www.vulcanhammer.info/china/Forbidden-City-Beijing-Hote.jpg" alt="Initial Picture - #NotFromMyDad">
+<strong>So with this project</strong> my dad and I would like to change that.Stretched out over the next two or three years we will try to digitize some of the old pictures, collect stories and try to connect them to present day China. </p>
 
 <p><strong>This here is just</strong> the landing page for the project - the whole documentation is available via the github wiki.</p>
 
