Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       <section id="main_content" class="inner">
         <p><strong>For the longest time</strong> I wanted to ask my dad more about his travels to China in the 1980s - shortly after the government decided to open up more to the world. I knew some stories and have seen a few pictures, but it still is a mystery to me.</p>
 
-<p><img src="http://www.vulcanhammer.info/china/Forbidden-City-Beijing-Hote.jpg" alt="Initial Picture - #NotFromMyDad">
-<strong>So with this project</strong> my dad and I would like to change that.Stretched out over the next two or three years we will try to digitize some of the old pictures, collect stories and try to connect them to present day China. </p>
+<p><img src="http://i.imgur.com/j5NFCEp.jpg" alt="Photo Credit to Some Other Guy :-D"></p>
+
+<p><strong>So with this project</strong> my dad and I would like to change that.Stretched out over the next two or three years we will try to digitize some of the old pictures, collect stories and try to connect them to present day China. </p>
 
 <p><strong>This here is just</strong> the landing page for the project - the whole documentation is available via the github wiki.</p>
 
